test/org/midica/testfiles/failing/chord-with-unknown-note.midica
INCLUDE inc/instruments.midica

CHORD test c d e c+6
